[gd_scene load_steps=27 format=3 uid="uid://uc8w4v327aj"]

[ext_resource type="Script" path="res://Scenes/Objects/Affordances/checkpoint.gd" id="1_0uyco"]
[ext_resource type="Texture2D" uid="uid://bm3kpjljb2t02" path="res://Resources/Textures/Checkpoint_Activating.png" id="2_6khb0"]
[ext_resource type="Texture2D" uid="uid://dsrak25si1d2r" path="res://Resources/Textures/Checkpoint_Activated.png" id="3_egpau"]
[ext_resource type="Texture2D" uid="uid://d88velhv2jao" path="res://Resources/Textures/Characters/Player/Saul/Hologram.png" id="3_kek0u"]
[ext_resource type="Texture2D" uid="uid://cfld3k6vsfwld" path="res://Resources/Textures/Checpoint_Inactive.png" id="4_noqhl"]
[ext_resource type="Shader" path="res://Resources/Shaders/glitchy.gdshader" id="5_ah12y"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3hut0"]
size = Vector2(26, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_b07lj"]
atlas = ExtResource("2_6khb0")
region = Rect2(0, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_dlxst"]
atlas = ExtResource("2_6khb0")
region = Rect2(32, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_00hgl"]
atlas = ExtResource("2_6khb0")
region = Rect2(64, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jb3is"]
atlas = ExtResource("2_6khb0")
region = Rect2(96, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_p26qb"]
atlas = ExtResource("2_6khb0")
region = Rect2(128, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_u68ah"]
atlas = ExtResource("3_egpau")
region = Rect2(0, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_88qxg"]
atlas = ExtResource("3_egpau")
region = Rect2(32, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_24l0i"]
atlas = ExtResource("3_egpau")
region = Rect2(64, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_u4rsy"]
atlas = ExtResource("3_egpau")
region = Rect2(96, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_f76vd"]
atlas = ExtResource("4_noqhl")
region = Rect2(0, 0, 32, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_oq15q"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_b07lj")
}, {
"duration": 1.3,
"texture": SubResource("AtlasTexture_dlxst")
}, {
"duration": 1.3,
"texture": SubResource("AtlasTexture_00hgl")
}, {
"duration": 1.5,
"texture": SubResource("AtlasTexture_jb3is")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p26qb")
}],
"loop": false,
"name": &"activating",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_u68ah")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_88qxg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_24l0i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u4rsy")
}],
"loop": true,
"name": &"active",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_f76vd")
}],
"loop": false,
"name": &"inactive",
"speed": 5.0
}]

[sub_resource type="FastNoiseLite" id="FastNoiseLite_wa31b"]
noise_type = 2
frequency = 0.1027
fractal_type = 0

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_dnq1v"]
seamless = true
noise = SubResource("FastNoiseLite_wa31b")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_srssl"]
shader = ExtResource("5_ah12y")
shader_parameter/noise = SubResource("NoiseTexture2D_dnq1v")

[sub_resource type="Curve" id="Curve_mcdbu"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.74269, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_030ff"]
curve = SubResource("Curve_mcdbu")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_phm30"]
particle_flag_disable_z = true
direction = Vector3(0, 0, 0)
initial_velocity_min = 40.0
initial_velocity_max = 60.0
gravity = Vector3(0, 0, 0)
scale_max = 3.0
scale_curve = SubResource("CurveTexture_030ff")

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_hbwhq"]
load_path = "res://.godot/imported/particles-Sheet.png-ff03683ea4b368a2c4600cc449697963.ctex"

[sub_resource type="AtlasTexture" id="AtlasTexture_w5na0"]
atlas = SubResource("CompressedTexture2D_hbwhq")
region = Rect2(0, 0, 10, 10)

[node name="Checkpoint" type="Area2D"]
monitorable = false
script = ExtResource("1_0uyco")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -23)
shape = SubResource("RectangleShape2D_3hut0")

[node name="Sprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -24)
sprite_frames = SubResource("SpriteFrames_oq15q")
animation = &"inactive"
autoplay = "inactive"

[node name="Hologram" type="Sprite2D" parent="."]
visible = false
modulate = Color(1, 1, 1, 0.392157)
material = SubResource("ShaderMaterial_srssl")
position = Vector2(0, -26)
texture = ExtResource("3_kek0u")

[node name="SpawnMarker" type="Marker2D" parent="."]
position = Vector2(0, -29)

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
position = Vector2(0, -30)
emitting = false
amount = 20
process_material = SubResource("ParticleProcessMaterial_phm30")
texture = SubResource("AtlasTexture_w5na0")
one_shot = true
explosiveness = 1.0

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="animation_finished" from="Sprite2D" to="." method="_on_sprite_animation_finished"]
